--- a/aip.tex
+++ b/aip.tex
@@ -2838,7 +2838,7 @@ Then for each such $i$, $\epsilon_{p^i}(A,\vv{u}) = \delta_{p^i}(A,\vv{u}) = \ft
    This shows that for each $e\ge 1$ there exists a path $(A,\vv{u}) = (A_1,\vv{u}_1) \to \cdots \to (A_e,\vv{u}_e)$ in $\sprout^*(A,\vv{u})$ where each pair is the collapse of the previous one along its minimal face, and consequently $\udeficit(A_i,\vv{u}_i,p) = \ft{A_i}{\vv{u}_i} = \ft{A}{\vv{u}}$, for each $1\le i \le e$.
 }
 \emily[inline]{OK, I removed the explicit induction and pruned it down. Feel free to edit further if you see fit.}
-
+\pedro[inline]{Maybe add a quick corollary about crits?}
 \newpage
 
 \appendix
