Added an example and a picture

--- a/aip.tex
+++ b/aip.tex
@@ -2495,6 +2495,21 @@ $M_1 \leftarrow \ft{A}{\vv{u}}\pp - \udeficit(A,\vv{u},p)$\;
    \end{enumerate}
 \end{remark}
 
+\begin{example}
+   \label{ex: ft.4}
+   \begin{figure}
+      \centering
+      \includegraphics[width=\textwidth]{pictures/sprouting_graph.pdf}
+      \caption{The sprouting subgraph for \Cref{ex: ft.4}}
+      \label{fig: sprouting graph}
+   \end{figure}
+   \Cref{fig: sprouting graph} shows the sprouting subgraph associated to the pair $(A,\vv{u})$ in our running example, initiated in \Cref{ex: ft}.
+   As in \Cref{ex: ft.3}, we consider the case where $p$ is congruent to $11$ modulo a universal denominator for $A$.
+   The overbar represents collapse along $\mf(A,\vv{u})$.   
+   The figure shows $\S_{p^e}(A,\vv{u})$ for $e=1,\ldots,4$, with $\sprout^*_p(A,\vv{u})$ highlighted in green.
+   The nodes shown in red are pairs that are not very small, which cause $\sprout^*_p(A,\vv{u})$ to terminate.
+\end{example}
+
 \begin{definition}
    \label{epsilon delta: D}
    If $(A,\vv{u})$ is very small, and $\S^{\ast}_{p^e}(A,\vv{u}) \neq \emptyset$, then we define
