--- a/pictures/sprouting_graph.tex
+++ b/pictures/sprouting_graph.tex
@@ -9,7 +9,8 @@
       align=center,
       minimum width = .7cm,
       minimum height = .7cm,
-      fill = cyan!40
+      fill = gray!30
+%      fill = cyan!40
 %      fill = blue!50!white!80
    },
    Snode/.style = {
@@ -17,14 +18,14 @@
       align=center,
       minimum width = .7cm,
       minimum height = .7cm,
-      fill = green!30
+      fill = green!60!blue!70
    },
    bad/.style = {
       shape=rectangle, %rounded corners,
       align=center,
       minimum width = .7cm,
       minimum height = .7cm,
-      fill = red!70!black!80
+      fill = red!70
    }
 }
 \tikzstyle{level 1}=[level distance=3cm, sibling distance=4cm]
