--- a/pictures/sprouting_graph.tex
+++ b/pictures/sprouting_graph.tex
@@ -1,6 +1,5 @@
-\documentclass[border=10pt]{standalone}
+\documentclass{standalone}
 \input{../preamble.tex}
-\newcommand{\club}{\vcenter{\hbox{\scalebox{1.5}{$\clubsuit$}}}}
 \usepackage{tikz}
 \usetikzlibrary{trees}
 \tikzset{
