--- a/aip.tex
+++ b/aip.tex
@@ -2252,7 +2252,7 @@ We are now ready to prove the above theorem.
 
    Note that this algorithm relies on the solution of several linear programs---each time an $F$-threshold is evaluated---and several integer programs---each time a universal deficit or shortfall is computed.
    Given the computational complexity of solving such programs, our algorithm is bound to be highly inefficient or impractical for large matrices or large $r$.
-   Surprisingly, though, a preliminary implementation in \emph{Macaulay2} by the authors fares well on examples of moderate size.
+   Somewhat surprisingly, a preliminary implementation in \emph{Macaulay2} by the authors fares well on small examples.
 \end{remark}
 
 \pedro[inline]{
