--- a/aip.tex
+++ b/aip.tex
@@ -3024,7 +3024,7 @@ We now briefly recall the process of reduction to prime characteristic, at least
 \pedro[inline]{
    Maybe we can cite both your thesis (which is a nice place to find everything) and some more official reference?
    Generic freeness is Theorem~24.1 in Matsumura. (It's a little more general, but recognizable.)
-   For the second remark, I found a reference for Bourbaki, but I have yet to check it.
+   The result in the second remark can be found in Bourbaki, Commutative Algebra, V.3.4, Corollary 1. 
 }
 
 \begin{remark}[Generic freeness] \label{generic-freeness} Suppose that $A$ is a Noetherian domain,  and that $S$ is a finitely generated $A$-algebra.  Generic freeness states that if $M$ is a finitely-generated $S$-module, then there exists  $0 \neq \ell \in A$ such that $A[\ell^{-1}] \otimes_A M$, the localization of $M$ at $\ell$, is free as a module over $A[\ell^{-1}]$.
