--- a/aip.tex
+++ b/aip.tex
@@ -2531,6 +2531,8 @@ $M_1 \leftarrow \ft{A}{\vv{u}}\pp - \udeficit(A,\vv{u},r)$\;
       Please feel free to remove or modify as you see fit.
    }
    \daniel{This picture suggests that the points get closer to the Newton polyhedron as the level in the graph increases.  Is this always the case?}
+   \pedro{Actually, from second to third level, the points get further.      
+   }
 \end{example}
 
 \begin{definition}
